--- a/src/modules/HourlyForecast/HourlyForecast.module.css
+++ b/src/modules/HourlyForecast/HourlyForecast.module.css
@@ -8,6 +8,7 @@
 
 .hourly {
   display: flex;
+  flex-direction: column;
   gap: 0.5rem;
 }
 .hourlyContent {
@@ -15,14 +16,16 @@
   flex-direction: column;
   align-items: center;
   background-color: #191922;
-  padding: 1rem 2rem 1rem 2rem;
   border-radius: 15px;
+  padding: 1rem 0rem;
 }
 .tittleHigh {
   margin-bottom: 1rem;
+  padding: 0rem 2rem 0rem 2rem;
 }
 .imgLi {
   width: 3vw;
+  height: 3vw;
 }
 .textoLi {
   margin-top: 1rem;
@@ -31,8 +34,15 @@
   margin-top: 1rem;
   display: flex;
   gap: 0.5rem;
+  max-width: 100%;
+  /* overflow: hidden; */
 }
 .listItem {
-  display: flex;
-  flex-direction: row;
+  display: inline-flex;
+  width: 9vw;
+}
+.tempAndWind {
+  margin: 0;
+  overflow-x: visible;
+  overflow: hidden;
 }
